# borjomi

./: .gitmodules  README.md
Arduino/: .clang-format  .gitignore  CMakeLists.txt  build.sh  build_tests.sh
Arduino/cmake/: arduino_core.cmake  arduino_fw.cmake
Arduino/cmake/toolchain/: leonardo.toolchain.cmake  nano.toolchain.cmake  nano328.toolchain.cmake  nano328old.toolchain.cmake  uno.toolchain.cmake
Arduino/libraries/: CMakeLists.txt
Arduino/libraries/CRC/: README.md  crc.cpp  crc.h  keywords.txt
Arduino/libraries/SPI/: SPI.h
Arduino/libraries/common-node/: can_message.h  capabilities.h  cmd_codes.h  common-node.creator  common-node.files  common-node.includes  nodes.h  stream_ext.cpp  tools.h  version.mk
Arduino/master-node/: Makefile  bt_protocol.txt  master-node.config  master-node.files  master-node.includes
Arduino/master-node-cfg/: Makefile  master-node-cfg.config
Arduino/master-node-cfg/src/: main.cpp
Arduino/master-node/src/: bt_commands.cpp  bt_commands.h  button.h  can_commands.cpp  can_commands.h  cap_implementation.h  cmd_handler.cpp  common.cpp  config.h  main.cpp  pc_start.cpp
Arduino/slave-node/: Makefile  slave-node.config  slave-node.files  slave-node.includes
Arduino/slave-node-cfg/: Makefile  slave-node-cfg.files  slave-node-cfg.includes
Arduino/slave-node-cfg/src/: config.h  main.cpp
Arduino/slave-node/src/: cmd_handler.cpp  cmd_handler.h  main.c_pp  main.cpp
Arduino/sources/: CMakeLists.txt
Arduino/sources/common-node/src/: can_message.cpp  can_message.h  cmd_codes.h  log.h  nodes.h  stream_ext.h  tools.h
Arduino/sources/lib-lcd/: LiquidCrystalDisplayCache.h  LiquidCrystalDisplayEx.h  LiquidCrystalDisplayEx.ipp
Arduino/sources/master-node/: bt_protocol.txt
Arduino/sources/master-node-cfg/src/: config.h  main.cpp
Arduino/sources/master-node/src/: bt_commands.cpp  bt_commands.h  button.cpp  can_commands.cpp  can_commands.h  cap_implementation.cpp  cmd_handler.cpp  cmd_handler.h  common.cpp  common.h  config.h  main.cpp  pc_start.h  scenarios.cpp  scenarios.h
Arduino/sources/slave-node-cfg/src/: config.h  main.cpp
Arduino/sources/slave-node/src/: cmd_handler.cpp  config.h  main.cpp
Arduino/sources/test-lcd/: main.cpp
Arduino/tests/: CMakeLists.txt
Arduino/tests/arduino-mock/: Arduino.cpp  Arduino.h  ArduinoSims.cpp  ArduinoSims.h  CMakeLists.txt  HardwareSerial.cpp  HardwareSerial.h  Logger.cpp  Logger.h  Print.h  Stream.cpp  Stream.h  TemplateTools.h
Arduino/tests/arduino-tests/: CMakeLists.txt  GmockMatchers.h  arduino_sims_tests.cpp  scenarios_tests.cpp
Arduino/tests/libraries-mock/: CMakeLists.txt  CanBusSims.cpp  CanBusSims.h  SPI.cpp  SPI.h  crc.cpp  crc.h  mcp_can.h
C++/SimpleControl/: MainWindow.cpp  MainWindow.h  MainWindow.ui  SimpleControl.pro
ClientApp/borjomi-client-app/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
ClientApp/borjomi-client-app/src/: index.html
Schematic/: BT.lib  Borjomi  Borjomi-Main-cache.lib  Borjomi-Main.bak  Borjomi-Main.kicad_pcb  Borjomi-Main.kicad_pcb-bak  Borjomi-Main.net  Borjomi-Main.pro  Borjomi-Main.sch  Borjomi-cache.lib  Borjomi-rescue.lib  Borjomi.bak  Borjomi.kicad_pcb  Borjomi.kicad_pcb-bak  Borjomi.net  Borjomi.pro  Borjomi.sch  Borjomi.xml  CAN.bck  CAN.lib  RelayModule.lib  Sensors.bck  Sensors.dcm  Sensors.lib  fp-info-cache  fp-lib-table  sym-lib-table
Schematic/ACS_CurrentSensor.pretty/: ACS712.kicad_mod
Schematic/Arduino.pretty/: Arduino_Nano_Holes0.9.kicad_mod
Schematic/BT.pretty/: HC-05.kicad_mod
Schematic/CAN.pretty/: AOC346_MCP2515.kicad_mod  AOC346_MCP2515_Holes0.9.kicad_mod
Schematic/Connector.pretty/: Degson_DG301_1x02_P5.00mm_Horizontal.kicad_mod  RJ14_YH-57-21_5722_6P4C.kicad_mod  SimpleJumper_Pitch5.08mm_Drill0.7mm_2pad.kicad_mod
Schematic/MH_Sensor.pretty/: MH_Sensor.kicad_mod  MH_Sensor_Holes0.9.kicad_mod
Schematic/RelayModule.pretty/: Relay_Module_1_Channel.kicad_mod  Relay_Module_1_Channel_Holes0.9.kicad_mod
Schematic/gerber/: Borjomi-PTH-drl_map.ps
Schematic/gerber/main-v1.0/: Borjomi-Main-B_Cu.gbl  Borjomi-Main-NPTH.drl  (+10 more)
Server/: tasks.txt
Server/borjomi-server/: app.js  package-lock.json  package.json
Server/borjomi-server2/: .gitignore  MantaTest.html  client.js  config.js  config.json  package-lock.json  package.json  server.js  test.js
Server/db-sql/: borjomi.sql
(+89 files in other folders)
